--- a/airs/content/pages/products/rules/list/credentials/130/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/130/index.adoc
@@ -24,15 +24,19 @@ because it will essentially go through all possible passwords given the
 alphabet used (lower case letters, upper case letters, numbers, symbols, etc.)
 and the maximum length of the password.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
+. [[r2]] link:https://www.cisecurity.org/controls/[CIS Controls. 16.10 Ensure All Accounts Have An Expiration Date].
+Ensure that all accounts have an expiration date that is monitored and
+enforced.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
 Allowing password aging to occur unchecked can result in the possibility of
 diminished password integrity.
 
-. [[r3]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.6]
+. [[r4]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.6]
 Where technically feasible,
 for password-only authentication for interactive user access,
 either technically or procedurally enforce password changes or an obligation to
 change the password at least once every 15 calendar months.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.4]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.4]
 Change user passwords/passphrases at least once every 90 days.
