--- a/airs/content/pages/products/rules/list/credentials/144/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/144/index.adoc
@@ -16,19 +16,21 @@ The organization must remove inactive user accounts periodically (purging).
 
 == References
 
-. [[r1]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (3)]
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 16.9 Disable Dormant Accounts].
+Automatically disable dormant accounts after a set period of inactivity.
+
+. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (3)]
 The information system automatically disables inactive accounts
 after [Assignment: organization-defined time period].
 
-
-. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (10)]
+. [[r3]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (10)]
 The information system terminates shared/group account credentials
 when members leave the group.
 
-. [[r3]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (13)]
+. [[r4]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (13)]
 The organization disables accounts of users posing a significant risk
 within [Assignment: organization-defined time period]
 of discovery of the risk.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.4]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.4]
 Remove/disable inactive user accounts within 90 days.
