airs\feat(doc): #3271.12 add cis refs to some rules
- Added CIS Controls refs to R158, R262 and R173
- Fixed some minor typos


Former-commit-id: 3678520521f3c173d0bcfa67998dd82e35f9f44d

--- a/airs/content/pages/products/rules/findings/hygiene/070/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/070/index.adoc
@@ -13,4 +13,4 @@ increase the chances that an exploitable vulnerability will be present.
 
 == Rules
 
-. [[r1]] [inner]#link:/products/rules/list/158/[R158. Define secure programming language]#
+. [[r1]] [inner]#link:/products/rules/list/158/[R158. Use a secure programming language]#
