airs\refac(cross): #3586 devsecops skims correct
- Two simple errors were corrected in sections DevSecOps and Skims.


Former-commit-id: 1e744e41d5c0f6012e77ac3da600e55887c44de5

--- a/airs/content/pages/solutions/devsecops/index.adoc
+++ b/airs/content/pages/solutions/devsecops/index.adoc
@@ -42,6 +42,7 @@ impacts on your business.
 
 === Break the build
 
-At Fluid Attacks, we have *Forces* to break the build. Within our Pentesting
-solution, we can break the build in any continuous integration pipeline without
-making the mistake of doing so with false positives or lies.
+At Fluid Attacks, we have *Forces* to break the build.
+Within our DevSecOps solution, we can break the build
+in any continuous integration pipeline
+without making the mistake of doing so with false positives or lies.
