airs\refac(doc): #3177.13 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: 5ad1f60e5892f63383428e754513a3744190ab45

--- a/airs/content/pages/products/rules/list/architecture/048/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/048/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Component, Source Code, System, Dependencies, Requirement, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R048. Components with a minimum of dependencies
+= R048. Components with minimal dependencies
 
 == Requirement
 
