--- a/airs/content/pages/products/rules/list/certificates/089/index.adoc
+++ b/airs/content/pages/products/rules/list/certificates/089/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The organization must not use digital certificates
-with a validity greater than two years.
+with a validity of more than two years.
 
 == Findings
 
