--- a/airs/content/pages/products/rules/list/certificates/093/index.adoc
+++ b/airs/content/pages/products/rules/list/certificates/093/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The system must use digital certificates with a consistent identification
-of the associated organization (service, server, among others).
+of the associated organization (service, server, etc.).
 
 == Findings
 
