--- a/airs/content/pages/products/rules/list/architecture/072/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/072/index.adoc
@@ -16,8 +16,8 @@ must be no more than 5 seconds.
 Response time is a relevant measure of a system's availability and
 adaptability to stress.
 It is also important when it comes to usability and reliance.
-For these reasons the response time must not surpass 5 seconds when the
-number of concurrent users reaches its peak.
+For these reasons, the response time must not surpass 5 seconds
+when the number of concurrent users reaches its peak.
 
 == Findings
 
